# telegram-bot

./: stripeapi.cabal
src/: StripeAPI.hs
src/StripeAPI/: Configuration.hs  SecuritySchemes.hs  TypeAlias.hs  Types.hs
src/StripeAPI/Operations/: PostAddStickerToSet.hs  PostAnswerCallbackQuery.hs  PostAnswerInlineQuery.hs  PostAnswerPreCheckoutQuery.hs  PostAnswerShippingQuery.hs  PostApproveChatJoinRequest.hs  PostBanChatMember.hs  PostBanChatSenderChat.hs  PostClose.hs  PostCopyMessage.hs  PostCreateChatInviteLink.hs  PostCreateNewStickerSet.hs  PostDeclineChatJoinRequest.hs  PostDeleteChatPhoto.hs  PostDeleteChatStickerSet.hs  PostDeleteMessage.hs  PostDeleteMyCommands.hs  PostDeleteStickerFromSet.hs  PostDeleteWebhook.hs  PostEditChatInviteLink.hs  PostEditMessageCaption.hs  PostEditMessageLiveLocation.hs  PostEditMessageMedia.hs  PostEditMessageReplyMarkup.hs  PostEditMessageText.hs  PostExportChatInviteLink.hs  PostForwardMessage.hs  PostGetChat.hs  PostGetChatAdministrators.hs  PostGetChatMember.hs  PostGetChatMemberCount.hs  PostGetFile.hs  PostGetGameHighScores.hs  PostGetMe.hs  PostGetMyCommands.hs  PostGetStickerSet.hs  PostGetUpdates.hs  PostGetUserProfilePhotos.hs  PostGetWebhookInfo.hs  PostLeaveChat.hs  (+42 more)
src/StripeAPI/Types/: Animation.hs  Animation.hs-boot  Audio.hs  Audio.hs-boot  BotCommand.hs  BotCommand.hs-boot  BotCommandScope.hs  BotCommandScope.hs-boot  BotCommandScopeAllChatAdministrators.hs  BotCommandScopeAllChatAdministrators.hs-boot  BotCommandScopeAllGroupChats.hs  BotCommandScopeAllGroupChats.hs-boot  BotCommandScopeAllPrivateChats.hs  BotCommandScopeAllPrivateChats.hs-boot  BotCommandScopeChat.hs  BotCommandScopeChat.hs-boot  BotCommandScopeChatAdministrators.hs  BotCommandScopeChatAdministrators.hs-boot  BotCommandScopeChatMember.hs  BotCommandScopeChatMember.hs-boot  BotCommandScopeDefault.hs  BotCommandScopeDefault.hs-boot  CallbackQuery.hs  CallbackQuery.hs-boot  Chat.hs  Chat.hs-boot  ChatInviteLink.hs  ChatInviteLink.hs-boot  ChatJoinRequest.hs  ChatJoinRequest.hs-boot  ChatLocation.hs  ChatLocation.hs-boot  ChatMember.hs  ChatMember.hs-boot  ChatMemberAdministrator.hs  ChatMemberAdministrator.hs-boot  ChatMemberBanned.hs  ChatMemberBanned.hs-boot  ChatMemberLeft.hs  ChatMemberLeft.hs-boot  (+193 more)
