cabal-version: 1.12

name:           stripeapi
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      StripeAPI
      StripeAPI.Operations.PostAddStickerToSet
      StripeAPI.Operations.PostAnswerCallbackQuery
      StripeAPI.Operations.PostAnswerInlineQuery
      StripeAPI.Operations.PostAnswerPreCheckoutQuery
      StripeAPI.Operations.PostAnswerShippingQuery
      StripeAPI.Operations.PostApproveChatJoinRequest
      StripeAPI.Operations.PostBanChatMember
      StripeAPI.Operations.PostBanChatSenderChat
      StripeAPI.Operations.PostClose
      StripeAPI.Operations.PostCopyMessage
      StripeAPI.Operations.PostCreateChatInviteLink
      StripeAPI.Operations.PostCreateNewStickerSet
      StripeAPI.Operations.PostDeclineChatJoinRequest
      StripeAPI.Operations.PostDeleteChatPhoto
      StripeAPI.Operations.PostDeleteChatStickerSet
      StripeAPI.Operations.PostDeleteMessage
      StripeAPI.Operations.PostDeleteMyCommands
      StripeAPI.Operations.PostDeleteStickerFromSet
      StripeAPI.Operations.PostDeleteWebhook
      StripeAPI.Operations.PostEditChatInviteLink
      StripeAPI.Operations.PostEditMessageCaption
      StripeAPI.Operations.PostEditMessageLiveLocation
      StripeAPI.Operations.PostEditMessageMedia
      StripeAPI.Operations.PostEditMessageReplyMarkup
      StripeAPI.Operations.PostEditMessageText
      StripeAPI.Operations.PostExportChatInviteLink
      StripeAPI.Operations.PostForwardMessage
      StripeAPI.Operations.PostGetChat
      StripeAPI.Operations.PostGetChatAdministrators
      StripeAPI.Operations.PostGetChatMember
      StripeAPI.Operations.PostGetChatMemberCount
      StripeAPI.Operations.PostGetFile
      StripeAPI.Operations.PostGetGameHighScores
      StripeAPI.Operations.PostGetMe
      StripeAPI.Operations.PostGetMyCommands
      StripeAPI.Operations.PostGetStickerSet
      StripeAPI.Operations.PostGetUpdates
      StripeAPI.Operations.PostGetUserProfilePhotos
      StripeAPI.Operations.PostGetWebhookInfo
      StripeAPI.Operations.PostLeaveChat
      StripeAPI.Operations.PostLogOut
      StripeAPI.Operations.PostPinChatMessage
      StripeAPI.Operations.PostPromoteChatMember
      StripeAPI.Operations.PostRestrictChatMember
      StripeAPI.Operations.PostRevokeChatInviteLink
      StripeAPI.Operations.PostSendAnimation
      StripeAPI.Operations.PostSendAudio
      StripeAPI.Operations.PostSendChatAction
      StripeAPI.Operations.PostSendContact
      StripeAPI.Operations.PostSendDice
      StripeAPI.Operations.PostSendDocument
      StripeAPI.Operations.PostSendGame
      StripeAPI.Operations.PostSendInvoice
      StripeAPI.Operations.PostSendLocation
      StripeAPI.Operations.PostSendMediaGroup
      StripeAPI.Operations.PostSendMessage
      StripeAPI.Operations.PostSendPhoto
      StripeAPI.Operations.PostSendPoll
      StripeAPI.Operations.PostSendSticker
      StripeAPI.Operations.PostSendVenue
      StripeAPI.Operations.PostSendVideo
      StripeAPI.Operations.PostSendVideoNote
      StripeAPI.Operations.PostSendVoice
      StripeAPI.Operations.PostSetChatAdministratorCustomTitle
      StripeAPI.Operations.PostSetChatDescription
      StripeAPI.Operations.PostSetChatPermissions
      StripeAPI.Operations.PostSetChatPhoto
      StripeAPI.Operations.PostSetChatStickerSet
      StripeAPI.Operations.PostSetChatTitle
      StripeAPI.Operations.PostSetGameScore
      StripeAPI.Operations.PostSetMyCommands
      StripeAPI.Operations.PostSetPassportDataErrors
      StripeAPI.Operations.PostSetStickerPositionInSet
      StripeAPI.Operations.PostSetStickerSetThumb
      StripeAPI.Operations.PostSetWebhook
      StripeAPI.Operations.PostStopMessageLiveLocation
      StripeAPI.Operations.PostStopPoll
      StripeAPI.Operations.PostUnbanChatMember
      StripeAPI.Operations.PostUnbanChatSenderChat
      StripeAPI.Operations.PostUnpinAllChatMessages
      StripeAPI.Operations.PostUnpinChatMessage
      StripeAPI.Operations.PostUploadStickerFile
      StripeAPI.Types
      StripeAPI.TypeAlias
      StripeAPI.Types.Animation
      StripeAPI.Types.Audio
      StripeAPI.Types.BotCommand
      StripeAPI.Types.BotCommandScope
      StripeAPI.Types.BotCommandScopeAllChatAdministrators
      StripeAPI.Types.BotCommandScopeAllGroupChats
      StripeAPI.Types.BotCommandScopeAllPrivateChats
      StripeAPI.Types.BotCommandScopeChat
      StripeAPI.Types.BotCommandScopeChatAdministrators
      StripeAPI.Types.BotCommandScopeChatMember
      StripeAPI.Types.BotCommandScopeDefault
      StripeAPI.Types.CallbackQuery
      StripeAPI.Types.Chat
      StripeAPI.Types.ChatInviteLink
      StripeAPI.Types.ChatJoinRequest
      StripeAPI.Types.ChatLocation
      StripeAPI.Types.ChatMember
      StripeAPI.Types.ChatMemberAdministrator
      StripeAPI.Types.ChatMemberBanned
      StripeAPI.Types.ChatMemberLeft
      StripeAPI.Types.ChatMemberMember
      StripeAPI.Types.ChatMemberOwner
      StripeAPI.Types.ChatMemberRestricted
      StripeAPI.Types.ChatMemberUpdated
      StripeAPI.Types.ChatPermissions
      StripeAPI.Types.ChatPhoto
      StripeAPI.Types.ChosenInlineResult
      StripeAPI.Types.Contact
      StripeAPI.Types.Dice
      StripeAPI.Types.Document
      StripeAPI.Types.EncryptedCredentials
      StripeAPI.Types.EncryptedPassportElement
      StripeAPI.Types.Error
      StripeAPI.Types.File
      StripeAPI.Types.ForceReply
      StripeAPI.Types.Game
      StripeAPI.Types.GameHighScore
      StripeAPI.Types.InlineKeyboardButton
      StripeAPI.Types.InlineKeyboardMarkup
      StripeAPI.Types.InlineQuery
      StripeAPI.Types.InlineQueryResult
      StripeAPI.Types.InlineQueryResultArticle
      StripeAPI.Types.InlineQueryResultAudio
      StripeAPI.Types.InlineQueryResultCachedAudio
      StripeAPI.Types.InlineQueryResultCachedDocument
      StripeAPI.Types.InlineQueryResultCachedGif
      StripeAPI.Types.InlineQueryResultCachedMpeg4Gif
      StripeAPI.Types.InlineQueryResultCachedPhoto
      StripeAPI.Types.InlineQueryResultCachedSticker
      StripeAPI.Types.InlineQueryResultCachedVideo
      StripeAPI.Types.InlineQueryResultCachedVoice
      StripeAPI.Types.InlineQueryResultContact
      StripeAPI.Types.InlineQueryResultDocument
      StripeAPI.Types.InlineQueryResultGame
      StripeAPI.Types.InlineQueryResultGif
      StripeAPI.Types.InlineQueryResultLocation
      StripeAPI.Types.InlineQueryResultMpeg4Gif
      StripeAPI.Types.InlineQueryResultPhoto
      StripeAPI.Types.InlineQueryResultVenue
      StripeAPI.Types.InlineQueryResultVideo
      StripeAPI.Types.InlineQueryResultVoice
      StripeAPI.Types.InputContactMessageContent
      StripeAPI.Types.InputInvoiceMessageContent
      StripeAPI.Types.InputLocationMessageContent
      StripeAPI.Types.InputMessageContent
      StripeAPI.Types.InputTextMessageContent
      StripeAPI.Types.InputVenueMessageContent
      StripeAPI.Types.Invoice
      StripeAPI.Types.KeyboardButton
      StripeAPI.Types.KeyboardButtonPollType
      StripeAPI.Types.LabeledPrice
      StripeAPI.Types.Location
      StripeAPI.Types.LoginUrl
      StripeAPI.Types.MaskPosition
      StripeAPI.Types.Message
      StripeAPI.Types.MessageAutoDeleteTimerChanged
      StripeAPI.Types.MessageEntity
      StripeAPI.Types.MessageId
      StripeAPI.Types.OrderInfo
      StripeAPI.Types.PassportData
      StripeAPI.Types.PassportElementError
      StripeAPI.Types.PassportElementErrorDataField
      StripeAPI.Types.PassportElementErrorFile
      StripeAPI.Types.PassportElementErrorFiles
      StripeAPI.Types.PassportElementErrorFrontSide
      StripeAPI.Types.PassportElementErrorReverseSide
      StripeAPI.Types.PassportElementErrorSelfie
      StripeAPI.Types.PassportElementErrorTranslationFile
      StripeAPI.Types.PassportElementErrorTranslationFiles
      StripeAPI.Types.PassportElementErrorUnspecified
      StripeAPI.Types.PassportFile
      StripeAPI.Types.PhotoSize
      StripeAPI.Types.Poll
      StripeAPI.Types.PollAnswer
      StripeAPI.Types.PollOption
      StripeAPI.Types.PreCheckoutQuery
      StripeAPI.Types.ProximityAlertTriggered
      StripeAPI.Types.ReplyKeyboardMarkup
      StripeAPI.Types.ReplyKeyboardRemove
      StripeAPI.Types.ResponseParameters
      StripeAPI.Types.ShippingAddress
      StripeAPI.Types.ShippingOption
      StripeAPI.Types.ShippingQuery
      StripeAPI.Types.Sticker
      StripeAPI.Types.StickerSet
      StripeAPI.Types.SuccessfulPayment
      StripeAPI.Types.Update
      StripeAPI.Types.User
      StripeAPI.Types.UserProfilePhotos
      StripeAPI.Types.Venue
      StripeAPI.Types.Video
      StripeAPI.Types.VideoNote
      StripeAPI.Types.Voice
      StripeAPI.Types.VoiceChatEnded
      StripeAPI.Types.VoiceChatParticipantsInvited
      StripeAPI.Types.VoiceChatScheduled
      StripeAPI.Types.WebhookInfo
      StripeAPI.Configuration
      StripeAPI.SecuritySchemes
      StripeAPI.Common
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , text
    , ghc-prim
    , http-conduit
    , http-client
    , http-types
    , bytestring
    , aeson
    , unordered-containers
    , vector
    , scientific
    , time
    , mtl
    , transformers
  default-language: Haskell2010
